wordpress_nginx/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: wordpress-site
  name: wordpress-site
  namespace: development
spec:
  progressDeadlineSeconds: 1200
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: wordpress-site
      tier: frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: wordpress-site
        tier: frontend
    spec:
      volumes:
      - configMap:
          defaultMode: 256
          name: nginxthroughpass
          optional: false
        name: nginxconf
      - name: shared-files
        emptyDir: {}
      #serviceAccountName: aws-load-balancer-controller
      containers:
      - name: app
        image: wordpress:php7.4-fpm
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: shared-files
            mountPath: /var/www/html
      - name: nginx
        image: nginx
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: shared-files
            mountPath: /var/www/html
          - name: nginxconf
            mountPath: /etc/nginx/conf.d
          # - name: wordpress-persistent-storage
          #   mountPath: /var/www/html
            readOnly: true
