wordpress_nginx/wordpress-statefull.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: wordpress-site
  name: wordpress-site
  namespace: development
spec:
  progressDeadlineSeconds: 1200
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: wordpress-site
      tier: frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: wordpress-site
        tier: frontend
    spec:
      volumes:
      # volumes:
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: pvc-csi
      # volumes:
      # - name: mysql-persistent-storage
      #   persistentVolumeClaim:
      #     claimName: ebs-mysql-pv-claim
      # - configMap:
      #     defaultMode: 256
      #     name: nginxthroughpass
      #     optional: false
      #   name: nginxconf
      # - name: shared-files
      #   emptyDir: {}
      containers:
        - name: app
          image: 187451058634.dkr.ecr.ap-south-1.amazonaws.com/wordpress:latest
          imagePullPolicy : IfNotPresent
          # volumeMounts:
          #   - name: shared-files
          #     mountPath: /var/www/html
          volumeMounts:
            - name: persistent-storage
              mountPath: /data
          # volumeMounts:
          #   - name: mysql-persistent-storage
          #     mountPath: /var/www/html
      # Nginx application
        - name: nginx
          image: nginx
          imagePullPolicy : IfNotPresent
          volumeMounts:
          - name: shared-files
            mountPath: /var/www/html
          - mountPath: /etc/nginx/conf.d
            name: nginxconf
            readOnly: true
