wordpress_nginx/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wordpress-site
  name: wordpress-site
  namespace: development
  # annotations:
  #   service.beta.kubernetes.io/ingress.class: alb
  #   #service.beta.kubernetes.io/aws-load-balancer-type: external
  #   #service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
  #   service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: wordpress-site
    tier: frontend
  sessionAffinity: None
  type: ClusterIP
